--- a/notebooks/2_Solutions.ipynb
+++ b/notebooks/2_Solutions.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "modern-cleaning",
    "metadata": {},
    "source": [
-    "This notebook is used to produce Figures 8-10 in the notes: steady-state solutions for some different parameter choices.\n",
+    "This notebook is used to produce Figures 7-9 in the notes: steady-state solutions for some different parameter choices.\n",
     "We are just computing the steady elevation solutions via $\\pmb{y}_e = -\\mathsf{A}^{-1}\\pmb{b}$ (see previous notebook or the notes), and using these to compute the horizontal velocity perturbation solutions."
    ]
   },
