--- a/notebooks/1_Analysis.ipynb
+++ b/notebooks/1_Analysis.ipynb
@@ -35,11 +35,7 @@
     "\n",
     "1. the properties of $\\mathsf{R}$ and $\\mathsf{B}$, \n",
     "2. the eigenvalues and eigenvectors of $\\mathsf{A}$, \n",
-    "3. the integral kernels $\\mathsf{K}_h$ and $\\mathsf{K}_s$ that are related to the\n",
-    "elevation solutions via $$\\widehat{h} = \\widehat{m}*\\mathsf{K}_h \\\\\n",
-    "\\widehat{s} = \\widehat{m}*\\mathsf{K}_s $$\n",
-    "  where $*$ denotes convolution over time.\n",
-    "\n",
+    "3. the integral kernels $\\mathsf{K}_h$ and $\\mathsf{K}_s$ that are related to the elevation solutions via $\\widehat{h} = \\widehat{m}*\\mathsf{K}_h$ and $\\widehat{s} = \\widehat{m}*\\mathsf{K}_s $ where $*$ denotes convolution over time.\n",
     "4. A free-space Green's function (AKA fundamental solution) for the steady surface-elevation anomaly produced by a line source basal melting (or freezing) anomaly"
    ]
   },
