--- a/notebooks/2_Solutions.ipynb
+++ b/notebooks/2_Solutions.ipynb
@@ -6,8 +6,18 @@
    "id": "modern-cleaning",
    "metadata": {},
    "source": [
-    "This notebook is used to produce Figures 7-9 in the notes: steady-state solutions for some different parameter choices.\n",
-    "We are just computing the steady elevation solutions via $\\pmb{y}_e = -\\mathsf{A}^{-1}\\pmb{b}$ (see previous notebook or the notes), and using these to compute the horizontal velocity perturbation solutions."
+    "This notebook is used to produce Figures 7-9 in the notes: steady-state solutions for some different parameter choices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "542d70a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -24,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import griddata\n",
     "from scipy.fft import ifft2,fft2\n",
-    "from operators import compute_h, compute_s,h_steady,s_steady,compute_u,compute_v,compute_w\n",
+    "from operators import compute_u,compute_w,compute_h,compute_s\n",
     "from params import *"
    ]
   },
@@ -43,16 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma = (L/4)/3                                                    # standard deviation for gaussian melt anomaly\n",
+    "sigma = 10.0/3.0                                                    # standard deviation for gaussian melt anomaly\n",
     "\n",
     "# For Figure 8 (melting) set:\n",
     "m = 5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H     # melt anomaly with amplitude of 5 m/yr\n",
     "\n",
     "# For Figure 9 and 10 set the negative version (freeze-on):\n",
-    "# m = 5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H     # melt anomaly with amplitude of 5 m/yr\n",
-    "# **(also setting L=4 in params.py for figure 10)\n",
-    "\n",
-    "# print('{:2e}'.format(np.max(np.abs(m))))"
+    "# m = 5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H    # melt anomaly with amplitude of 5 m/yr\n"
    ]
   },
   {
@@ -70,9 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ex = 5e1   # vertical exaggeration factor\n",
-    "if L<10:\n",
-    "    ex = 3e1  # set to smaller value for the example in figure 10."
+    "ex = 4e1   # vertical exaggeration factor"
    ]
   },
   {
@@ -95,78 +100,17 @@
     "# First compute the elevation solutions\n",
     "\n",
     "alpha = 0\n",
-    "h_e = h_steady(k,alpha,m)\n",
-    "s_e = s_steady(k,alpha,m)\n",
+    "h = compute_h(t,k,kx,alpha,m)\n",
+    "s = compute_s(t,k,kx,alpha,m)\n",
     "\n",
-    "# extract the centerline profiles \n",
-    "yc = int(Ny/2.)     # y index at centerline \n",
-    "tc = -1             # last timestep (steady profile)\n",
+    "# # extract the centerline profiles \n",
+    "yc = int(Ny/2.)     # y index at centerline         \n",
     "\n",
-    "he_c = h_e[tc,:,yc] \n",
-    "se_c = s_e[tc,:,yc]\n",
+    "hc = h[-1,:,yc] \n",
+    "sc = s[-1,:,yc]\n",
     "\n",
-    "# Next we compute the velocity fields at a few depths:\n",
-    "\n",
-    "Nz = 21\n",
-    "z_plt = np.linspace(0,1,num=Nz)\n",
-    "U = np.zeros((Nt,Nx,Ny,Nz))\n",
-    "W = np.zeros((Nt,Nx,Ny,Nz))\n",
-    "\n",
-    "for i in range(Nz):\n",
-    "    U[:,:,:,i] = compute_u(h_e,s_e,k,kx,z_plt[i])\n",
-    "    W[:,:,:,i] = compute_w(h_e,s_e,k,z_plt[i])\n",
-    "\n",
-    "step = 1\n",
-    "x_plt = x0\n",
-    "Ue_c = U[tc,:,yc,:]\n",
-    "We_c = W[tc,:,yc,:]\n",
-    "\n",
-    "s_plt = se_c\n",
-    "h_plt = he_c\n",
-    "\n",
-    "\n",
-    "# Next we interpolate the velocity solutions on the deformed grid for plotting\n",
-    "\n",
-    "x_g,z_g = np.meshgrid(x_plt,z_plt)\n",
-    "\n",
-    "z_d = (1-z_g)*ex*s_plt + z_g*(ex*h_plt+1)\n",
-    "\n",
-    "nxi = 101\n",
-    "nzi = 101\n",
-    "\n",
-    "xi = np.linspace(x_g.min(),x_g.max(),num=nxi)\n",
-    "zi = np.linspace(z_d.min(),z_d.max(),num=nzi)\n",
-    "\n",
-    "Xi,Zi = np.meshgrid(xi,zi)\n",
-    "\n",
-    "points = (x_g.flatten(),z_d.flatten())\n",
-    "points_i = (Xi,Zi)\n",
-    "\n",
-    "U_plt = griddata(points=points,values=Ue_c.T.flatten(), xi=points_i,fill_value=0)\n",
-    "W_plt = griddata(points=points,values=We_c.T.flatten(), xi=points_i,fill_value=0)\n",
-    "\n",
-    "speed = np.sqrt(U_plt**2 + W_plt**2)\n",
-    "max_speed = np.max(speed)\n",
-    "\n",
-    "# # Print some sanity-check information:\n",
-    "# print('With the scales in params.py:')\n",
-    "# print('max u = '+str(np.max(np.abs(U_plt))*3.154e7*H/t_r)+' m/yr')\n",
-    "# print('max w = '+str(np.max(np.abs(W_plt))*3.154e7*H/t_r)+' m/yr')\n",
-    "# print('max h = '+str(np.max(np.abs(h_plt))*H)+' m')\n",
-    "# print('max s = '+str(np.max(np.abs(s_plt))*H)+' m')\n",
-    "\n",
-    "# # Sanity check plot to make sure interpolation on regular grid (from deformed grid) works: \n",
-    "# plt.close()\n",
-    "# plt.subplot(211)\n",
-    "# plt.contourf(x_g,z_d,We_c.T*H*3.154e7/t_r,cmap='Blues')\n",
-    "# #plt.plot(x_g.flatten(),z_d.flatten(),'ko',markersize=0.25)\n",
-    "# plt.colorbar()\n",
-    "# plt.subplot(212)\n",
-    "# plt.contourf(xi,zi,W_plt*H*3.154e7/t_r,cmap='Blues',extend='both')\n",
-    "# plt.plot(x0,ex*he_c+1,linewidth=2,color='k',linestyle='--')\n",
-    "# plt.plot(x0,ex*se_c,linewidth=2,color='k',linestyle='--')\n",
-    "# plt.colorbar()\n",
-    "# plt.show()"
+    "mc = m[-1,:,yc]\n",
+    "\n"
    ]
   },
   {
@@ -185,58 +129,15 @@
    "outputs": [],
    "source": [
     "alpha = 2e-1\n",
-    "h_e = h_steady(k,alpha,m)\n",
-    "s_e = s_steady(k,alpha,m)\n",
+    "m_2 = -5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H\n",
+    "h_2 = compute_h(t,k,kx,alpha,m_2)\n",
+    "s_2 = compute_s(t,k,kx,alpha,m_2)\n",
     "\n",
-    "# extract the centerline profiles \n",
-    "yc = int(Ny/2.)     # y index at centerline \n",
-    "tc = -1             # last timestep (steady profile)\n",
+    "hc_2 = h_2[-1,:,yc] \n",
+    "sc_2 = s_2[-1,:,yc]\n",
     "\n",
-    "he_c = h_e[tc,:,yc] \n",
-    "se_c = s_e[tc,:,yc]\n",
-    "\n",
-    "# Next we compute the velocity fields at a few depths:\n",
-    "\n",
-    "Nz = 21\n",
-    "z_plt = np.linspace(0,1,num=Nz)\n",
-    "U = np.zeros((Nt,Nx,Ny,Nz))\n",
-    "W = np.zeros((Nt,Nx,Ny,Nz))\n",
-    "\n",
-    "for i in range(Nz):\n",
-    "    U[:,:,:,i] = compute_u(h_e,s_e,k,kx,z_plt[i])\n",
-    "    W[:,:,:,i] = compute_w(h_e,s_e,k,z_plt[i])\n",
-    "\n",
-    "step = 1\n",
-    "x_plt = x0\n",
-    "Ue_c = U[tc,:,yc,:]\n",
-    "We_c = W[tc,:,yc,:]\n",
-    "\n",
-    "s_plt_2 = se_c\n",
-    "h_plt_2 = he_c\n",
-    "\n",
-    "\n",
-    "# Next we interpolate the velocity solutions on the deformed grid for plotting\n",
-    "\n",
-    "x_g,z_g = np.meshgrid(x_plt,z_plt)\n",
-    "\n",
-    "z_d = (1-z_g)*ex*s_plt + z_g*(ex*h_plt+1)\n",
-    "\n",
-    "nxi = 101\n",
-    "nzi = 101\n",
-    "\n",
-    "xi = np.linspace(x_g.min(),x_g.max(),num=nxi)\n",
-    "zi = np.linspace(z_d.min(),z_d.max(),num=nzi)\n",
-    "\n",
-    "Xi,Zi = np.meshgrid(xi,zi)\n",
-    "\n",
-    "points = (x_g.flatten(),z_d.flatten())\n",
-    "points_i = (Xi,Zi)\n",
-    "\n",
-    "U_plt_2 = griddata(points=points,values=Ue_c.T.flatten(), xi=points_i,fill_value=0)\n",
-    "W_plt_2 = griddata(points=points,values=We_c.T.flatten(), xi=points_i,fill_value=0)\n",
-    "\n",
-    "speed_2 = np.sqrt(U_plt_2**2 + W_plt_2**2)\n",
-    "max_speed_2 = np.max(speed_2)"
+    "mc_2 = m_2[-1,:,yc]\n",
+    "\n"
    ]
   },
   {
@@ -261,24 +162,17 @@
     "\n",
     "plt.subplot(121)\n",
     "plt.title(r'(a) $\\alpha=0$',fontsize=20,loc='left',zorder=100)\n",
-    "plt.plot(x_plt,ex*s_plt,linewidth=2.5,color='darkblue',zorder=16,label=r'$\\gamma s$')\n",
-    "plt.plot(x_plt,ex*h_plt+1,linewidth=2.5,color='forestgreen',zorder=13,label=r'$1+\\gamma h$')\n",
+    "plt.plot(x0,ex*sc,linewidth=2.5,color='darkblue',zorder=16,label=r'$\\gamma s$')\n",
+    "plt.plot(x0,ex*hc+1,linewidth=2.5,color='forestgreen',zorder=13,label=r'$1+\\gamma h$')\n",
     "\n",
-    "plt.plot(x_plt,ex*(-delta*s_plt)+1,linewidth=2.5,color='k',linestyle='--',zorder=80)\n",
+    "plt.plot(x0,ex*(-delta*sc)+1,linewidth=2.5,color='k',linestyle='--',zorder=80)\n",
     "\n",
-    "plt.fill_between(x_plt,y1=ex*h_plt+1, y2=2*np.ones(np.size(x_plt)),facecolor='w',alpha=1.0,zorder=12)\n",
-    "plt.fill_between(x_plt,y1=ex*s_plt, y2=ex*h_plt+1,facecolor='aliceblue',alpha=1.0)\n",
-    "plt.fill_between(x_plt,y1=-2*np.ones(np.size(x_plt)), y2=ex*s_plt,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
-    "stream = plt.streamplot(xi,zi,U_plt/max_speed,W_plt/max_speed,color=speed/max_speed,arrowsize=1.5,linewidth=2,minlength=0.6,density=2,cmap='Reds')\n",
+    "plt.fill_between(x0,y1=ex*sc, y2=ex*hc+1,facecolor='aliceblue',alpha=1.0)\n",
+    "plt.fill_between(x0,y1=-2*np.ones(np.size(x0)), y2=ex*sc,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
     "\n",
-    "if L >10:\n",
-    "    plt.annotate(xy=(-L+1,1.03),text='air',fontsize=20,zorder=30)\n",
-    "    plt.annotate(xy=(-L+1,0.03),text='ice',fontsize=20,zorder=31)\n",
-    "    plt.annotate(xy=(-L+1,-0.15),text='water',fontsize=20,zorder=32)\n",
-    "else:\n",
-    "    plt.annotate(xy=(-L+0.1,1.03),text='air',fontsize=20,zorder=30)\n",
-    "    plt.annotate(xy=(-L+0.1,0.03),text='ice',fontsize=20,zorder=31)\n",
-    "    plt.annotate(xy=(-L+0.1,-0.15),text='water',fontsize=20,zorder=32)\n",
+    "plt.annotate(xy=(-L+0.1,1.03),text='air',fontsize=20,zorder=30)\n",
+    "plt.annotate(xy=(-L+0.1,0.05),text='ice',fontsize=20,zorder=31)\n",
+    "plt.annotate(xy=(-L+0.1,-0.12),text='water',fontsize=20,zorder=32)\n",
     "    \n",
     "plt.ylabel(r'$z$',fontsize=20)\n",
     "plt.xlabel(r'$x$',fontsize=20)\n",
@@ -287,36 +181,49 @@
     "plt.ylim(-0.5,1.25)\n",
     "plt.xlim(-L,L)\n",
     "\n",
+    "axins = plt.gca().inset_axes([0.0, -0.5,1, 0.25],sharex=plt.gca())\n",
+    "axins.plot(x0,mc,linewidth=2,color='crimson',linestyle='-')\n",
+    "axins.set_ylabel(r'$m$',fontsize=16,color='crimson')\n",
+    "axins.set_ylim(-np.abs(m).max()-1e-4,np.abs(m).max()+1e-4)\n",
+    "axins.tick_params(axis='y', which='major', labelsize=16,color='crimson',labelcolor='crimson')\n",
+    "axins.tick_params(axis='x',direction=\"in\",which='major', labelsize=16,top=True, labeltop=True, bottom=False, labelbottom=False)\n",
+    "axins.ticklabel_format(axis='y', style='sci', scilimits=(-4,-4),useMathText=True)\n",
+    "plt.setp(axins.get_xticklabels(), visible=False)\n",
+    "\n",
     "plt.subplot(122)\n",
     "plt.title(r'(b) $\\alpha={1}/{5}$',fontsize=20,loc='left',zorder=100)\n",
     "\n",
-    "plt.plot(x_plt,ex*s_plt_2,linewidth=2.5,color='darkblue',zorder=16,label=r'$\\gamma s$')\n",
-    "plt.plot(x_plt,ex*h_plt_2+1,linewidth=2.5,color='forestgreen',zorder=13,label=r'$1+\\gamma h$')\n",
+    "plt.plot(x0,ex*sc_2,linewidth=2.5,color='darkblue',zorder=16,label=r'$\\gamma s$')\n",
+    "plt.plot(x0,ex*hc_2+1,linewidth=2.5,color='forestgreen',zorder=13,label=r'$1+\\gamma h$')\n",
     "\n",
     "# # vv hydrostatic thickness profile vv\n",
-    "plt.plot(x_plt,ex*(-delta*s_plt_2)+1,linewidth=2.5,color='k',linestyle='--',zorder=80,label=r'$1-\\gamma\\delta s$')\n",
+    "plt.plot(x0,ex*(-delta*sc_2)+1,linewidth=2.5,color='k',linestyle='--',zorder=80,label=r'$1-\\gamma\\delta s$')\n",
     "\n",
-    "plt.fill_between(x_plt,y1=ex*h_plt_2+1, y2=2*np.ones(np.size(x_plt)),facecolor='w',alpha=1.0,zorder=12)\n",
-    "plt.fill_between(x_plt,y1=ex*s_plt_2, y2=ex*h_plt_2+1,facecolor='aliceblue',alpha=1.0)\n",
-    "plt.fill_between(x_plt,y1=-2*np.ones(np.size(x_plt)), y2=ex*s_plt_2,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
-    "stream = plt.streamplot(xi,zi,U_plt_2/max_speed_2,W_plt_2/max_speed_2,color=speed_2/max_speed_2,arrowsize=1.5,linewidth=2,minlength=0.6,density=2,cmap='Reds')\n",
-    "plt.legend(fontsize=20,ncol=3,bbox_to_anchor=(0.55,-0.175))\n",
+    "plt.fill_between(x0,y1=ex*sc_2, y2=ex*hc_2+1,facecolor='aliceblue',alpha=1.0)\n",
+    "plt.fill_between(x0,y1=-2*np.ones(np.size(x0)), y2=ex*sc_2,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
+    "plt.legend(fontsize=20,ncol=3,bbox_to_anchor=(0.55,-0.5))\n",
     "plt.xlabel(r'$x$',fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
-    "plt.gca().yaxis.set_ticklabels([])\n",
+    "plt.gca().yaxis.tick_right()\n",
+    "plt.gca().yaxis.set_label_position(\"right\")\n",
+    "plt.yticks(fontsize=16)\n",
     "plt.ylim(-0.5,1.25)\n",
     "plt.xlim(-L,L)\n",
     "\n",
-    "fig.subplots_adjust(right=0.85)\n",
-    "cbar_ax = fig.add_axes([0.875, 0.12, 0.02, 0.75])\n",
-    "cbar = fig.colorbar(stream.lines,cax=cbar_ax,orientation='vertical')\n",
-    "cbar.ax.tick_params(labelsize=16)\n",
-    "cbar.set_label(r'$|\\mathbf{u}|\\,/\\, \\Vert\\mathbf{u}\\Vert_\\infty$',fontsize=24,labelpad=10)\n",
-    "cbar.ax.tick_params(labelsize=16)\n",
+    "axins = plt.gca().inset_axes([0.0, -0.5,1, 0.25],sharex=plt.gca())\n",
+    "axins.plot(x0,mc_2,linewidth=2,color='crimson',linestyle='-')\n",
+    "axins.set_ylabel(r'$m$',fontsize=16,color='crimson')\n",
+    "axins.yaxis.set_label_position(\"right\")\n",
+    "axins.set_ylim(-np.abs(m_2).max()-1e-4,np.abs(m_2).max()+1e-4)\n",
+    "axins.ticklabel_format(axis='y', style='sci', scilimits=(-4,-4),useMathText=True)\n",
+    "axins.yaxis.set_offset_position('right')\n",
+    "axins.tick_params(axis='y', which='major', labelsize=16,color='crimson',labelcolor='crimson',left=False, labelleft=False, right=True, labelright=True)\n",
+    "axins.tick_params(axis='x',direction=\"in\",which='major', labelsize=16,top=True, labeltop=True, bottom=False, labelbottom=False)\n",
+    "plt.setp(axins.get_xticklabels(), visible=False)\n",
+    "\n",
     "\n",
     "plt.savefig('profiles',bbox_inches='tight')\n",
-    "plt.show()\n",
-    "plt.close()"
+    "plt.show()"
    ]
   },
   {
@@ -344,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
