re-implement steady solution

--- a/notebooks/2_Solutions.ipynb
+++ b/notebooks/2_Solutions.ipynb
@@ -34,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import griddata\n",
     "from scipy.fft import ifft2,fft2\n",
-    "from operators import compute_u,compute_w,compute_h,compute_s\n",
+    "from operators import compute_u,compute_w,compute_h,compute_s,h_steady,s_steady\n",
     "from params import *"
    ]
   },
@@ -102,13 +102,13 @@
     "alpha = 0\n",
     "h = compute_h(t,k,kx,alpha,m)\n",
     "s = compute_s(t,k,kx,alpha,m)\n",
+    "# h = h_steady(k,alpha,m)\n",
+    "# s = s_steady(k,alpha,m)\n",
     "\n",
     "# # extract the centerline profiles \n",
     "yc = int(Ny/2.)     # y index at centerline         \n",
-    "\n",
     "hc = h[-1,:,yc] \n",
     "sc = s[-1,:,yc]\n",
-    "\n",
     "mc = m[-1,:,yc]\n",
     "\n"
    ]
@@ -128,14 +128,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = 2e-1\n",
+    "alpha_2 = 2e-1\n",
     "m_2 = -5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H\n",
-    "h_2 = compute_h(t,k,kx,alpha,m_2)\n",
-    "s_2 = compute_s(t,k,kx,alpha,m_2)\n",
-    "\n",
+    "h_2 = compute_h(t,k,kx,alpha_2,m_2)\n",
+    "s_2 = compute_s(t,k,kx,alpha_2,m_2)\n",
+    "# h_2 = h_steady(k,alpha_2,m_2)\n",
+    "# s_2 = s_steady(k,alpha_2,m_2)\n",
     "hc_2 = h_2[-1,:,yc] \n",
     "sc_2 = s_2[-1,:,yc]\n",
-    "\n",
     "mc_2 = m_2[-1,:,yc]\n",
     "\n"
    ]
@@ -184,7 +184,7 @@
     "axins = plt.gca().inset_axes([0.0, -0.5,1, 0.25],sharex=plt.gca())\n",
     "axins.plot(x0,mc,linewidth=2,color='crimson',linestyle='-')\n",
     "axins.set_ylabel(r'$m$',fontsize=16,color='crimson')\n",
-    "axins.set_ylim(-np.abs(m).max()-1e-4,np.abs(m).max()+1e-4)\n",
+    "axins.set_ylim(-np.abs(m).max()-2e-4,np.abs(m).max()+2e-4)\n",
     "axins.tick_params(axis='y', which='major', labelsize=16,color='crimson',labelcolor='crimson')\n",
     "axins.tick_params(axis='x',direction=\"in\",which='major', labelsize=16,top=True, labeltop=True, bottom=False, labelbottom=False)\n",
     "axins.ticklabel_format(axis='y', style='sci', scilimits=(-4,-4),useMathText=True)\n",
@@ -203,6 +203,7 @@
     "plt.fill_between(x0,y1=-2*np.ones(np.size(x0)), y2=ex*sc_2,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
     "plt.legend(fontsize=20,ncol=3,bbox_to_anchor=(0.55,-0.5))\n",
     "plt.xlabel(r'$x$',fontsize=20)\n",
+    "plt.ylabel(r'$z$',fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.gca().yaxis.tick_right()\n",
     "plt.gca().yaxis.set_label_position(\"right\")\n",
@@ -214,13 +215,12 @@
     "axins.plot(x0,mc_2,linewidth=2,color='crimson',linestyle='-')\n",
     "axins.set_ylabel(r'$m$',fontsize=16,color='crimson')\n",
     "axins.yaxis.set_label_position(\"right\")\n",
-    "axins.set_ylim(-np.abs(m_2).max()-1e-4,np.abs(m_2).max()+1e-4)\n",
+    "axins.set_ylim(-np.abs(m_2).max()-2e-4,np.abs(m_2).max()+2e-4)\n",
     "axins.ticklabel_format(axis='y', style='sci', scilimits=(-4,-4),useMathText=True)\n",
     "axins.yaxis.set_offset_position('right')\n",
     "axins.tick_params(axis='y', which='major', labelsize=16,color='crimson',labelcolor='crimson',left=False, labelleft=False, right=True, labelright=True)\n",
     "axins.tick_params(axis='x',direction=\"in\",which='major', labelsize=16,top=True, labeltop=True, bottom=False, labelbottom=False)\n",
     "plt.setp(axins.get_xticklabels(), visible=False)\n",
-    "\n",
     "\n",
     "plt.savefig('profiles',bbox_inches='tight')\n",
     "plt.show()"
