mostly plotting edits

--- a/notebooks/2_Solutions.ipynb
+++ b/notebooks/2_Solutions.ipynb
@@ -100,17 +100,68 @@
     "# First compute the elevation solutions\n",
     "\n",
     "alpha = 0\n",
-    "h = compute_h(t,k,kx,alpha,m)\n",
-    "s = compute_s(t,k,kx,alpha,m)\n",
-    "# h = h_steady(k,alpha,m)\n",
-    "# s = s_steady(k,alpha,m)\n",
+    "h = h_steady(m,alpha)\n",
+    "s = s_steady(m,alpha)\n",
     "\n",
     "# # extract the centerline profiles \n",
     "yc = int(Ny/2.)     # y index at centerline         \n",
     "hc = h[-1,:,yc] \n",
     "sc = s[-1,:,yc]\n",
     "mc = m[-1,:,yc]\n",
-    "\n"
+    "\n",
+    "\n",
+    "Nz = 21\n",
+    "z_plt = np.linspace(0,1,num=Nz)\n",
+    "U = np.zeros((Nt,Nx,Ny,Nz))\n",
+    "W = np.zeros((Nt,Nx,Ny,Nz))\n",
+    "\n",
+    "for i in range(Nz):\n",
+    "    U[:,:,:,i] = compute_u(h,s,z_plt[i])\n",
+    "    W[:,:,:,i] = compute_w(h,s,z_plt[i])\n",
+    "\n",
+    "step = 1\n",
+    "x_plt = x0\n",
+    "Uc = U[-1,:,yc,:]\n",
+    "Wc = W[-1,:,yc,:]\n",
+    "\n",
+    "\n",
+    "# Next we interpolate the velocity solutions on the deformed grid for plotting\n",
+    "\n",
+    "x_g,z_g = np.meshgrid(x_plt,z_plt)\n",
+    "\n",
+    "z_d = (1-z_g)*ex*sc + z_g*(ex*hc+1)\n",
+    "\n",
+    "nxi = 101\n",
+    "nzi = 101\n",
+    "\n",
+    "xi = np.linspace(x_g.min(),x_g.max(),num=nxi)\n",
+    "zi = np.linspace(z_d.min(),z_d.max(),num=nzi)\n",
+    "\n",
+    "Xi,Zi = np.meshgrid(xi,zi)\n",
+    "\n",
+    "points = (x_g.flatten(),z_d.flatten())\n",
+    "points_i = (Xi,Zi)\n",
+    "\n",
+    "Uc = griddata(points=points,values=Uc.T.flatten(), xi=points_i,fill_value=0)\n",
+    "Wc = griddata(points=points,values=Wc.T.flatten(), xi=points_i,fill_value=0)\n",
+    "\n",
+    "speed = np.sqrt(Uc**2 + Wc**2)\n",
+    "max_speed = np.max(speed)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "535635a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print some sanity-check information:\n",
+    "print('With the scales in params.py:')\n",
+    "print('max u = '+str(np.max(np.abs(Uc))*3.154e7*H/t_r)+' m/yr')\n",
+    "print('max w = '+str(np.max(np.abs(Wc))*3.154e7*H/t_r)+' m/yr')\n",
+    "print('max h = '+str(np.max(np.abs(hc))*H)+' m')\n",
+    "print('max s = '+str(np.max(np.abs(sc))*H)+' m')"
    ]
   },
   {
@@ -130,14 +181,59 @@
    "source": [
     "alpha_2 = 2e-1\n",
     "m_2 = -5*np.exp(-0.5*(sigma**(-2))*(x**2+y**2 ))*(t_r/3.154e7)/H\n",
-    "h_2 = compute_h(t,k,kx,alpha_2,m_2)\n",
-    "s_2 = compute_s(t,k,kx,alpha_2,m_2)\n",
-    "# h_2 = h_steady(k,alpha_2,m_2)\n",
-    "# s_2 = s_steady(k,alpha_2,m_2)\n",
+    "h_2 = h_steady(m_2,alpha_2)\n",
+    "s_2 = s_steady(m_2,alpha_2)\n",
     "hc_2 = h_2[-1,:,yc] \n",
     "sc_2 = s_2[-1,:,yc]\n",
     "mc_2 = m_2[-1,:,yc]\n",
-    "\n"
+    "\n",
+    "Nz = 21\n",
+    "U_2 = np.zeros((Nt,Nx,Ny,Nz))\n",
+    "W_2 = np.zeros((Nt,Nx,Ny,Nz))\n",
+    "\n",
+    "for i in range(Nz):\n",
+    "    U_2[:,:,:,i] = compute_u(h_2,s_2,z_plt[i])\n",
+    "    W_2[:,:,:,i] = compute_w(h_2,s_2,z_plt[i])\n",
+    "\n",
+    "step = 1\n",
+    "x_plt = x0\n",
+    "Uc_2 = U_2[-1,:,yc,:]\n",
+    "Wc_2 = W_2[-1,:,yc,:]\n",
+    "\n",
+    "# Next we interpolate the velocity solutions on the deformed grid for plotting\n",
+    "\n",
+    "x_g,z_g = np.meshgrid(x_plt,z_plt)\n",
+    "\n",
+    "z_d = (1-z_g)*ex*sc_2 + z_g*(ex*hc_2+1)\n",
+    "\n",
+    "xi_2 = np.linspace(x_g.min(),x_g.max(),num=nxi)\n",
+    "zi_2 = np.linspace(z_d.min(),z_d.max(),num=nzi)\n",
+    "\n",
+    "Xi_2,Zi_2 = np.meshgrid(xi_2,zi_2)\n",
+    "\n",
+    "points = (x_g.flatten(),z_d.flatten())\n",
+    "points_i = (Xi_2,Zi_2)\n",
+    "\n",
+    "Uc_2 = griddata(points=points,values=Uc_2.T.flatten(), xi=points_i,fill_value=0)\n",
+    "Wc_2 = griddata(points=points,values=Wc_2.T.flatten(), xi=points_i,fill_value=0)\n",
+    "\n",
+    "speed_2 = np.sqrt(Uc_2**2 + Wc_2**2)\n",
+    "max_speed_2 = np.max(speed_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e1e9b88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print some sanity-check information:\n",
+    "print('With the scales in params.py:')\n",
+    "print('max u = '+str(np.max(np.abs(Uc_2))*3.154e7*H/t_r)+' m/yr')\n",
+    "print('max w = '+str(np.max(np.abs(Wc_2))*3.154e7*H/t_r)+' m/yr')\n",
+    "print('max h = '+str(np.max(np.abs(hc_2))*H)+' m')\n",
+    "print('max s = '+str(np.max(np.abs(sc_2))*H)+' m')"
    ]
   },
   {
@@ -164,17 +260,15 @@
     "plt.title(r'(a) $\\alpha=0$',fontsize=20,loc='left',zorder=100)\n",
     "plt.plot(x0,ex*sc,linewidth=2.5,color='darkblue',zorder=16,label=r'$\\gamma s$')\n",
     "plt.plot(x0,ex*hc+1,linewidth=2.5,color='forestgreen',zorder=13,label=r'$1+\\gamma h$')\n",
-    "\n",
     "plt.plot(x0,ex*(-delta*sc)+1,linewidth=2.5,color='k',linestyle='--',zorder=80)\n",
-    "\n",
     "plt.fill_between(x0,y1=ex*sc, y2=ex*hc+1,facecolor='aliceblue',alpha=1.0)\n",
     "plt.fill_between(x0,y1=-2*np.ones(np.size(x0)), y2=ex*sc,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
-    "\n",
+    "stream = plt.streamplot(xi,zi,Uc/max_speed,Wc/max_speed,color=speed/max_speed,arrowsize=1.5,linewidth=2.5,minlength=0.8,density=1.5,cmap='Reds')\n",
     "plt.annotate(xy=(-L+0.1,1.03),text='air',fontsize=20,zorder=30)\n",
     "plt.annotate(xy=(-L+0.1,0.05),text='ice',fontsize=20,zorder=31)\n",
     "plt.annotate(xy=(-L+0.1,-0.12),text='water',fontsize=20,zorder=32)\n",
     "    \n",
-    "plt.ylabel(r'$z$',fontsize=20)\n",
+    "plt.ylabel(r'$z$',fontsize=20,labelpad=-5)\n",
     "plt.xlabel(r'$x$',fontsize=20)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.yticks(fontsize=16)\n",
@@ -201,9 +295,10 @@
     "\n",
     "plt.fill_between(x0,y1=ex*sc_2, y2=ex*hc_2+1,facecolor='aliceblue',alpha=1.0)\n",
     "plt.fill_between(x0,y1=-2*np.ones(np.size(x0)), y2=ex*sc_2,facecolor='lightsteelblue',alpha=1,zorder=15)\n",
-    "plt.legend(fontsize=20,ncol=3,bbox_to_anchor=(0.55,-0.5))\n",
+    "stream = plt.streamplot(xi_2,zi_2,Uc_2/max_speed_2,Wc_2/max_speed_2,color=speed_2/max_speed_2,arrowsize=1.5,linewidth=2.5,minlength=0.8,density=1.5,cmap='Reds')\n",
+    "plt.legend(fontsize=20,ncol=3,bbox_to_anchor=(0.55,-0.52))\n",
     "plt.xlabel(r'$x$',fontsize=20)\n",
-    "plt.ylabel(r'$z$',fontsize=20)\n",
+    "plt.ylabel(r'$z$',fontsize=20,labelpad=-5)\n",
     "plt.xticks(fontsize=16)\n",
     "plt.gca().yaxis.tick_right()\n",
     "plt.gca().yaxis.set_label_position(\"right\")\n",
@@ -221,6 +316,13 @@
     "axins.tick_params(axis='y', which='major', labelsize=16,color='crimson',labelcolor='crimson',left=False, labelleft=False, right=True, labelright=True)\n",
     "axins.tick_params(axis='x',direction=\"in\",which='major', labelsize=16,top=True, labeltop=True, bottom=False, labelbottom=False)\n",
     "plt.setp(axins.get_xticklabels(), visible=False)\n",
+    "\n",
+    "fig.subplots_adjust(right=0.85)\n",
+    "cbar_ax = fig.add_axes([0.925, 0.12, 0.02, 0.75])\n",
+    "cbar = fig.colorbar(stream.lines,cax=cbar_ax,orientation='vertical')\n",
+    "cbar.ax.tick_params(labelsize=16)\n",
+    "cbar.set_label(r'$|\\mathbf{u}|\\,/\\, \\Vert\\mathbf{u}\\Vert_\\infty$',fontsize=24,labelpad=10)\n",
+    "cbar.ax.tick_params(labelsize=16)\n",
     "\n",
     "plt.savefig('profiles',bbox_inches='tight')\n",
     "plt.show()"
