--- a/notebooks/0_Algebra.ipynb
+++ b/notebooks/0_Algebra.ipynb
@@ -1,19 +1,31 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This program use SymPy to symbolically derive several quantities that are described\n",
+    "in the notes: the (1) relaxation and buoyancy transfer functions, (2) the velocity\n",
+    "solutions, and (3) a limiting value of one of the eigenvalues of the problem.\n",
+    "\n",
+    "This file is best read/used in conjunction with the derivations in the manuscript."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elevation Solutions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this program use SymPy to symbolically derive several quantities that are described\n",
-    "# in the notes: the (1) relaxation and buoyancy transfer functions, (2) the velocity\n",
-    "# solutions, and (3) a limiting value of one of the eigenvalues of the problem.\n",
-    "#\n",
-    "# all of the printing is commented out; this file is best read/used in conjunction\n",
-    "# with the derivation in the appendix.\n",
-    "\n",
-    "#---------------------- 1. ELEVATION SOLUTIONS----------------------------------\n",
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -47,27 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          2⋅k       4⋅k                3⋅k           k         3⋅k         k\n",
-      "- 4⋅b₁⋅k⋅ℯ    - b₁⋅ℯ    + b₁ + 2⋅b₂⋅k⋅ℯ    + 2⋅b₂⋅k⋅ℯ  + 2⋅b₂⋅ℯ    - 2⋅b₂⋅ℯ \n",
-      "────────────────────────────────────────────────────────────────────────────\n",
-      "                          2  2⋅k    4⋅k      2⋅k                            \n",
-      "                       4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1                        \n"
+      "   ⎛       2⋅k    4⋅k    ⎞      ⎛           k              3⋅k⎞\n",
+      "b₁⋅⎝- 4⋅k⋅ℯ    - ℯ    + 1⎠ + b₂⋅⎝(2⋅k - 2)⋅ℯ  + (2⋅k + 2)⋅ℯ   ⎠\n",
+      "───────────────────────────────────────────────────────────────\n",
+      "                   ⎛   2    ⎞  2⋅k    4⋅k                      \n",
+      "                   ⎝4⋅k  + 2⎠⋅ℯ    - ℯ    - 1                  \n"
      ]
     }
    ],
    "source": [
     "\n",
     "# # print the result (modulo a 1/k factor) for floating ice:\n",
-    "#sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_h),b1),b2),expk) )\n",
-    "d = b2+b1\n",
-    "sp.pprint(sp.simplify(w_h))"
+    "sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_h),b1),b2),expk) )"
    ]
   },
   {
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +113,224 @@
     "\n",
     "# # print this:\n",
     "sp.pprint(sp.collect(sp.collect(sp.collect(sp.simplify(w_b),b1),b2),expk) )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Velocity Solutions"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also want the vertical velocity at an arbitrary depth z, which we can compute as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h component:\n",
+      "    ⎛    ⎛     2⋅k    2⋅k    ⎞      2⋅k       ⎛      ⎛       2⋅k    ⎞      2⋅k\n",
+      "-b₁⋅⎝k⋅z⋅⎝2⋅k⋅ℯ    + ℯ    - 1⎠ + k⋅ℯ    + k + ⎝- k⋅z⋅⎝2⋅k + ℯ    - 1⎠ + k⋅ℯ   \n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "                                                   2  2⋅k    4⋅k      2⋅k     \n",
+      "                                                4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1 \n",
+      "\n",
+      "        2⋅k    ⎞  2⋅k⋅z    2⋅k    ⎞  -k⋅(z - 1) \n",
+      " + k + ℯ    - 1⎠⋅ℯ      + ℯ    - 1⎠⋅ℯ           \n",
+      "────────────────────────────────────────────────\n",
+      "                                                \n",
+      "                                                \n",
+      "\n",
+      " s component:\n",
+      "   ⎛⎛     2       ⎛       2⋅k    ⎞          2⋅k    ⎞  2⋅k   ⎛   2  2⋅k       ⎛\n",
+      "b₂⋅⎝⎝- 2⋅k  + k⋅z⋅⎝2⋅k + ℯ    - 1⎠ + 2⋅k + ℯ    - 1⎠⋅ℯ    + ⎝2⋅k ⋅ℯ    - k⋅z⋅⎝\n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "                                                        2  2⋅k    4⋅k      2⋅k\n",
+      "                                                     4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ   \n",
+      "\n",
+      "     2⋅k    2⋅k    ⎞        2⋅k    2⋅k    ⎞  2⋅k⋅z⎞  -k⋅z\n",
+      "2⋅k⋅ℯ    + ℯ    - 1⎠ + 2⋅k⋅ℯ    + ℯ    - 1⎠⋅ℯ     ⎠⋅ℯ    \n",
+      "─────────────────────────────────────────────────────────\n",
+      "                                                         \n",
+      " - 1                                                     \n"
+     ]
+    }
+   ],
+   "source": [
+    "#---------------------- 2. VELOCITY SOLUTIONS------------------------------------\n",
+    "z = sp.Symbol('z')          # depth\n",
+    "\n",
+    "# w(z) modulo a 1/k factor\n",
+    "w = sp.exp(k*z)*sol[0] + (1/sp.exp(k*z))*sol[1] + k*z*sp.exp(k*z)*sol[2] + k*z*sol[3]/sp.exp(k*z)\n",
+    "\n",
+    "print('h component:')\n",
+    "sp.pprint(sp.simplify(sp.collect(sp.collect(sp.simplify(w.subs(b2,0)),b1),b2)) )\n",
+    "print('\\n s component:')\n",
+    "sp.pprint(sp.simplify(sp.collect(sp.collect(sp.simplify(w.subs(b1,0)),b1),b2)) )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will compute the horizontal velocity expressions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h component:\n",
+      "     ⎛       2⋅k          2⋅k⋅z      2⋅k      2⋅k⋅z      2⋅k⋅(z + 1)        2⋅\n",
+      "b₁⋅k⋅⎝2⋅k⋅z⋅ℯ    + 2⋅k⋅z⋅ℯ      + z⋅ℯ    - z⋅ℯ      + z⋅ℯ            - z - ℯ  \n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "                                                2  2⋅k    4⋅k      2⋅k        \n",
+      "                                             4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1    \n",
+      "\n",
+      "k    2⋅k⋅z    2⋅k⋅(z + 1)    ⎞  k⋅(1 - z)\n",
+      "  + ℯ      - ℯ            + 1⎠⋅ℯ         \n",
+      "─────────────────────────────────────────\n",
+      "                                         \n",
+      "                                         \n",
+      "\n",
+      " s component:\n",
+      "     ⎛         2⋅k          2⋅k⋅(z + 1)        2⋅k        2⋅k⋅(z + 1)      4⋅k\n",
+      "b₂⋅k⋅⎝- 2⋅k⋅z⋅ℯ    - 2⋅k⋅z⋅ℯ            + 2⋅k⋅ℯ    + 2⋅k⋅ℯ            - z⋅ℯ   \n",
+      "──────────────────────────────────────────────────────────────────────────────\n",
+      "                                                 2  2⋅k    4⋅k      2⋅k       \n",
+      "                                              4⋅k ⋅ℯ    - ℯ    + 2⋅ℯ    - 1   \n",
+      "\n",
+      "      2⋅k      2⋅k⋅z      2⋅k⋅(z + 1)⎞  -k⋅z\n",
+      " + z⋅ℯ    + z⋅ℯ      - z⋅ℯ           ⎠⋅ℯ    \n",
+      "────────────────────────────────────────────\n",
+      "                                            \n",
+      "                                            \n"
+     ]
+    }
+   ],
+   "source": [
+    "# coefficients from the elevation solution problem\n",
+    "A,B,C,D = sol\n",
+    "\n",
+    "wb = (A+B)/k                                    # w at z=0\n",
+    "wh = (A*expk + B/expk + k*expk*C + k*D/expk)/k        # w at z=H\n",
+    "\n",
+    "wz0 = A-B+C+D                                   # dw/dz at z=0\n",
+    "\n",
+    "wzh = A*expk -B/expk +C*expk +C*k*expk -D*k/expk + D/expk # dw/dz at z=H\n",
+    "\n",
+    "# second derivative at z=H\n",
+    "wzzh = A*k*expk + B*k/expk + 2*C*k*expk + C*k*k*expk + D*k*k/expk  -2*D*k/expk\n",
+    "\n",
+    "# second derivative at z=0\n",
+    "wzz0 = k*(A+B+2*C-2*D)\n",
+    "\n",
+    "Ph = wzh - wz0*(expk+1/expk)/2- wzz0*(1/k)*(expk-1/expk)/2   # P(H)\n",
+    "\n",
+    "Pzh = wzzh - wz0*k*(expk-1/expk)/2 - wzz0*(expk+1/expk)/2    # P_z(H)\n",
+    "\n",
+    "b3 = -(k*wh + Pzh/k)                                 # first rhs vector entry\n",
+    "\n",
+    "b4 = -(k*wb)                                         # 2nd rhs vector entry\n",
+    "\n",
+    "# Matrix for horizontal surface velocity solutions\n",
+    "M2 = sp.Matrix(( [expk, -1/expk],[1, -1]))\n",
+    "\n",
+    "# solution vector\n",
+    "E,F = sp.symbols('E,F')\n",
+    "\n",
+    "# RHS vector:\n",
+    "d = sp.Matrix(2,1,[b3,b4])\n",
+    "\n",
+    "sol2, = sp.linsolve((M2,d),[E,F])\n",
+    "\n",
+    "\n",
+    "uh = Ph + sol2[0]*expk + sol2[1]/expk\n",
+    "\n",
+    "wz = A*sp.exp(k*z) - B*sp.exp(-k*z) + C*(1+k*z)*sp.exp(k*z)+ D*(1-k*z)*sp.exp(-k*z)\n",
+    "\n",
+    "coshkz = (sp.exp(k*z) + sp.exp(-k*z))/2\n",
+    "sinhkz = (sp.exp(k*z) - sp.exp(-k*z))/2\n",
+    "\n",
+    "\n",
+    "P = wz -wz0*coshkz- wzz0*sinhkz/k\n",
+    "\n",
+    "u = P + sol2[0]*sp.exp(k*z) + sol2[1]*sp.exp(-k*z)\n",
+    "\n",
+    "## print velocity response functions\n",
+    "print('h component:')\n",
+    "sp.pprint(sp.simplify((sp.collect(sp.collect(u.subs(b2,0),b1),b2))))\n",
+    "print('\\n s component:')\n",
+    "sp.pprint(sp.simplify((sp.collect(sp.collect(u.subs(b1,0),b1),b2))))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eigenvalue Limit"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we compute the limit of the larger eigenvalue in the problem as $k\\to 0$, see the next notebook or the manuscript for more context. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "limit of lambda_+ as k goes to zero:\n",
+      "   -δ    \n",
+      "─────────\n",
+      "2⋅(δ + 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = sp.Symbol('delta',positive=True)\n",
+    "R0 = (expk**4)+4*k*(expk**2)-1\n",
+    "D = k*(expk**4-2*(1+2*k**2)*(expk**2)+1)\n",
+    "B0 = 2*(k+1)*(expk**3) + 2*(k-1)*expk\n",
+    "R = R0/D\n",
+    "B = B0/D\n",
+    "\n",
+    "# symbolic expression for the larger eigenvalue in the problem:\n",
+    "lamda = -(d+1)*R*(1- sp.sqrt((4*d/(d+1)**2)*((B0/R0)**2  -1) + 1))/2\n",
+    "\n",
+    "# take the limit as k --> 0:\n",
+    "L = sp.limit(lamda,k,0)\n",
+    "\n",
+    "# # print the limit:\n",
+    "print('limit of lambda_+ as k goes to zero:')\n",
+    "sp.pprint(sp.factor(sp.simplify(L)))"
    ]
   }
  ],
